; ModuleID = '/home/carl/AnghaBench/tengine/src/event/modules/extr_ngx_eventport_module.c_ngx_eventport_notify.c'
source_filename = "/home/carl/AnghaBench/tengine/src/event/modules/extr_ngx_eventport_module.c_ngx_eventport_notify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@notify_event = common dso_local global %struct.TYPE_3__ zeroinitializer, align 4
@ep = common dso_local global i32 0, align 4
@NGX_LOG_ALERT = common dso_local global i32 0, align 4
@ngx_errno = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"port_send() failed\00", align 1
@NGX_ERROR = common dso_local global i32 0, align 4
@NGX_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @ngx_eventport_notify to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ngx_eventport_notify(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  store i32 %4, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @notify_event, i32 0, i32 1), align 4
  %5 = load i32, i32* @ep, align 4
  %6 = call i64 @port_send(i32 %5, i32 0, %struct.TYPE_3__* @notify_event)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %14

8:                                                ; preds = %1
  %9 = load i32, i32* @NGX_LOG_ALERT, align 4
  %10 = load i32, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @notify_event, i32 0, i32 0), align 4
  %11 = load i32, i32* @ngx_errno, align 4
  %12 = call i32 @ngx_log_error(i32 %9, i32 %10, i32 %11, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  %13 = load i32, i32* @NGX_ERROR, align 4
  store i32 %13, i32* %2, align 4
  br label %16

14:                                               ; preds = %1
  %15 = load i32, i32* @NGX_OK, align 4
  store i32 %15, i32* %2, align 4
  br label %16

16:                                               ; preds = %14, %8
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}

declare dso_local i64 @port_send(i32, i32, %struct.TYPE_3__*) #1

declare dso_local i32 @ngx_log_error(i32, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
